[package]
name = "manual_rwlock"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/JamesTrewern/manual_rwlock"
description = "A library implementing An RW lock with more manual control"
authors = ["James Trewern <Trewern.James@gmail.com>"]
keywords =["RwLock", "multi threading", "async", "concurrency", "RefCell"]
categories = ["data-structures", "memory-management", "asynchronous"]


[dependencies]
atomic-wait = "1.1.0"